fixed judge null and .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-*.class
-
+#*.class
 # Package Files #
-*.jar
-*.war
-*.ear
+#*.jar
+#*.war
+#*.ear
+AsimpleCacheDemo/bin
+AsimpleCacheDemo/.classpath
